--- a/Page.html
+++ b/Page.html
@@ -30,6 +30,8 @@
         <h1>Welcome to the Earth Page</h1>
         <p>This is just a Earth page for demonstration purposes.</p>
         <a href="index.html" class="btn btn-success back-btn">Go Back</a>
+        <h1>Want to see original page</h1>
+        <a href="https://websitedemos.net/earth-02/?customize=template" class="btn btn-success back-btn">Original Page</a>
     </div>
 
 </body>
