--- a/Page.html
+++ b/Page.html
@@ -4,35 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page</title>
+    <!-- Bootstrap 4.5 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background:url(1.jpg) no-repeat center/cover;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        .back-btn {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="page.css">
 </head>
 <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">EARTH</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="About.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Service.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
+    <!-- Main Content -->
     <div class="container">
-        <h1>Welcome to the Earth Page</h1>
-        <p>This is just a Earth page for demonstration purposes.</p>
-        <a href="index.html" class="btn btn-success back-btn">Go Back</a>
-        <h1>Want to see original page</h1>
-        <a href="https://websitedemos.net/earth-02/?customize=template" class="btn btn-success back-btn">Original Page</a>
+        <h1>Welcome to the Earth Page</h1><br>
+        <p>This is just an Earth page for explore button purposes.</p><br>
+        <a href="index.html" class="btn btn-success back-btn">Go Back</a><br>
+        <h1>Want to see the original page?</h1><br>
+        <a href="https://websitedemos.net/earth-02/?customize=template" target="_blank" class="btn btn-success back-btn">Original Page</a>
     </div>
 
+    <!-- Footer -->
+    <footer class="footer py-3 text-center">
+        <div class="container">
+            <p>&copy; 2022 Earth. All rights reserved. | Cloned by APPARI SAI KIRAN</p>
+            <nav>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="About.html">About</a></li>
+                    <li class="list-inline-item"><a href="Service.html">Services</a></li>
+                    <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+      </footer>
+
+    <!-- Bootstrap 4.5 JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
