--- a/index.html
+++ b/index.html
@@ -4,90 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earth - Endless Potential</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">EARTH</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Page.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Page.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Page.html">Contact</a>
-                        </li>
-                    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">EARTH</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Service.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="hero-section text-center text-white">
+        <div class="container">
+            <h1 class="display-4">EARTH</h1>
+            <p class="lead">Endless Potential</p>
+            <a href="Page.html" class="btn btn-success">Explore</a>
+        </div>
+    </header>
+    <section id="services" class="services py-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="I2.jpg" class="img-fluid mb-3" alt="Web Design">
+                    <h3>Web Design</h3>
+                    <p>Custom web design for small businesses. Capture new audiences and increase sales.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="I3.jpg" class="img-fluid mb-3" alt="Graphic Design">
+                    <h3>Graphic Design</h3>
+                    <p>Logos, merchandise and more. Memorable designs for impactful experiences.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="I4.jpg" class="img-fluid mb-3" alt="Content Creation">
+                    <h3>Content Creation</h3>
+                    <p>Attract people to your website with the best content. That's what we do.</p>
                 </div>
             </div>
-        </nav>
-    </header>
-    <section class="main">
-        <div class="content">
-            <h1>EARTH</h1>
-            <p>ENDLESS POTENTIAL</p>
-            <a href="Page.html" class="explore-btn">Explore</a>
         </div>
     </section>
-    <section class="services">
-        <div class="service">
-            <img src="s1.jpg" alt="Web Design">
-            <h3>Web Design</h3>
-            <p>Custom web design for small businesses, we help you capture new audiences and increase your sales.</p>
-        </div>
-        <div class="service">
-            <img src="s2.jpg" alt="Graphic Design">
-            <h3>Graphic Design</h3>
-            <p>Logos, merchandise and more. Anyone can create nice graphics. We think it's better to create memorable ones.</p>
-        </div>
-        <div class="service">
-            <img src="s3.jpg" alt="Content Creation">
-            <h3>Content Creation</h3>
-            <p>Want to attract people to your website? You have to have the best content in the world. That’s what we do.</p>
+    <section class="container my-5">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>About Us</h3>
+            <p>I made it super easy to update and flow with my tutorials. Lots of love went into it. I hope you love it as much as I do.</p>
+          </div>
+          <div class="col-md-6">
+            <img src="I5.jpg" alt="About Us" class="img-fluid custom-img">
+          </div>
         </div>
     </section>
-    <section class="about">
-        <div class="about-text">
-            <h2>About Us</h2>
-            <p>
-                I made it so it is super easy to update and so that it flows perfectly with my tutorials. 
-                Lots of love and hundreds of hours went into making it. 
-                I hope you love it as much as I do. 
-                I wish you the best of luck with your business, enjoy the adventure.
-            </p>
-        </div>
-        <img src="2.jpg" alt="About us image">
-    </section>
-    <section class="contact">
-        <div Class="contacts">
-            <h2>TALK TO US</h2>
-            <p>Have any questions? We are always open to talk about your business, new projects, creative opportunities and how we can help you.</p>
-            <a href="#" class="contact-btn">Get in Touch</a>
+    <section id="contact" class="contact py-5 text-center">
+        <div class="container">
+            <h2>Talk to Us</h2>
+            <p>We are always open to talking about your business, new projects, and opportunities.</p>
+            <a href="contact.html" class="btn btn-success">Get in Touch</a>
         </div>
     </section>
-    <footer>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="Page.html">About</a></li>
-            <li><a href="Page.html">Services</a></li>
-            <li><a href="Page.html">Contact</a></li>
-        </ul><br>
-        <p>©2024 Earth. All rights reserved.<br>
-            Cloned by APPARI SAI KIRAN</p>
+    <footer class="footer py-3 text-center">
+        <div class="container">
+            <p>&copy; 2022 Earth. All rights reserved. | Cloned by APPARI SAI KIRAN</p>
+            <nav>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="About.html">About</a></li>
+                    <li class="list-inline-item"><a href="Service.html">Services</a></li>
+                    <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
