--- a/Service.html
+++ b/Service.html
@@ -37,7 +37,7 @@
         <a href="Page.html" class="btn btn-success">Explore</a>
       </div>
       <div class="col-md-6">
-        <img src="S2.jpg" alt="Web Design" class="img-fluid">
+        <img src="SE2.jpg" alt="Web Design" class="img-fluid">
       </div>
     </div>
     <div class="row my-5">
@@ -47,7 +47,7 @@
         <a href="Page.html" class="btn btn-success">Explore</a>
       </div>
       <div class="col-md-6 order-md-1">
-        <img src="S3.jpg" alt="Graphic Design" class="img-fluid">
+        <img src="SE3.jpg" alt="Graphic Design" class="img-fluid">
       </div>
     </div>
     <div class="row">
@@ -57,7 +57,7 @@
         <a href="Page.html" class="btn btn-success">Explore</a>
       </div>
       <div class="col-md-6">
-        <img src="S4.jpg" alt="Content Writing" class="img-fluid">
+        <img src="SE4.jpg" alt="Content Writing" class="img-fluid">
       </div>
     </div>
   </section>
